# post-06

./: .gitignore  README.md
3dprinter/chop/: arm.stl  hand.stl
3dprinter/oyaji/: head.stl  mouse_center.stl  mouse_left.stl  mouse_right.stl
boke/: README.md  pyproject.toml
boke/data/: dajare.json
boke/src/boke/: __init__.py  main.py
chop/: README.md  pyproject.toml
chop/src/chop/: __init__.py  pyvenv.cfg  sample.proto  sample_pb2.py
chop/src/chop/src/: client.py  lib_servo.py  sample_pb2_grpc.py  server.py
oyaji/: README.md  pyproject.toml
oyaji/oyaji_ard/: oyaji_ard.ino
oyaji/src/oyaji/: __init__.py
quiz/: .gitignore  pubspec.yaml
quiz/assets/json/: quiz.json
quiz/lib/: flip_image.dart  main.dart
quiz/lib/utils/: load_json.dart
tukkomi/: README.md  pyproject.toml
tukkomi/src/tukkomi/: __init__.py  control_motor.py  gag_judegement.py  main.py  voice_recognition.py
