[project]
name = "boke"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Atori", email = "atori.ikeyama@gmail.com" }]
dependencies = ["openai>=1.4.0"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
