[project]
name = "chop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atori", email = "atori.ikeyama@gmail.com" }
]
dependencies = [
    "whisper-mic>=1.3.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python main.py"

[tool.hatch.metadata]
allow-direct-references = true
