[project]
name = "tukkomi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atori", email = "atori.ikeyama@gmail.com" }
]
dependencies = [
    "SpeechRecognition>=3.10.1",
    "pyaudio>=0.2.14",
    "langchain>=0.0.27",
    "openai==0.28",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
